ejemplo/3-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: orders-api
  namespace: demo
  labels:
    app: orders-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-api
  template:
    metadata:
      labels:
        app: orders-api
    spec:
      containers:
      - name: orders-api
        image: jgaonaakm/jericalla-logistics-api-orders:0.0.1 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
